[package]
name = "pcd-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
itertools = "0.11.0"
kiss3d = "0.35.0"
nalgebra = "0.30.1"
num-traits = "0.2.17"
palette = "0.7.3"
pcd-rs = { version = "0.10.0", features = ["derive"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"


[dependencies.supervisely-format]
git = "https://github.com/NEWSLabNTU/supervisely-format.git"
rev = "cf43e3f8c2817fe0d55ae987c3bd1a0353c98b28"

[dependencies.kiss3d-utils]
git = "https://github.com/NEWSLabNTU/kiss3d-utils.git"
tag = "v0.1.0"
